cambio a la pagina

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
             <h2>¡PRUÉBALO AHORA!</h2>
             <a href="game-menu.html" class="play-button">JUGAR</a>
         </div>
+        <div class="vote-section">
+            <div class="vote-container">
+                <h2 class="vote-title">¡VOTA POR NUESTRO JUEGO!</h2>
+                <div class="vote-content">
+                    <div class="vote-gif">
+                        <img src="assets/images/shiroko.gif" alt="Shiroko <3" class="pixel-gif">
+                    </div>
+                    <div class="vote-text">
+                        <p>¿Te gustó nuestra implementación del método de la secante en Pong?</p>
+                        <p>¡Ayúdanos votando por nuestro proyecto!</p>
+                        <a href="#votar" class="vote-button">VOTAR AHORA</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 </body>
